--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
         <form id="forma">
             <div class="mb-3">
-                <label for="operandoA"><h5>Operando A</h5></label>
-                <input type="number" class="form-control" placeholder="Escribe operando A" id="operandoA">
+                <label for="operandoA"><h3>Operando A</h3></label>
+                <input type="number" class="form-control-lg" placeholder="Escribe operando A" id="operandoA">
             </div>
             <div class="mb-3">
-                <label for="operandoB"><h5>Operando B</h5></label>
-                <input type="number" class="form-control" placeholder="Escribe operando B" id="operandoB">
+                <label for="operandoB"><h3>Operando B</h3></label>
+                <input type="number" class="form-control-lg" placeholder="Escribe operando B" id="operandoB">
             </div>
         </form>
         <h2>Elija la Operacion</h2>
@@ -44,9 +44,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-   
-
     <script src="js/app.js" ></script>
   </body>
 </html>
